# vd

./: .env  README.md  inference.py  pyproject.toml  requirements.txt  run.sh
doc/: Test task - Translate to German.docx
