[project]
name = "vidubb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyascii==0.3.2",
    "bangla==0.0.5",
    "bnnumerizer==0.0.2",
    "bnunicodenormalizer==0.1.7",
    "coqpit==0.0.17",
    "dateparser==1.1.8",
    "einops==0.8.0",
    "encodec==0.1.1",
    "faster-whisper==1.1.1",
    "ffmpeg-python==0.2.0",
    "g2pkk==0.1.2",
    "gradio==5.8.0",
    "grpcio-status==1.33.2",
    "gruut==2.2.3",
    "gruut-ipa==0.13.0",
    "gruut-lang-de==2.0.1",
    "gruut-lang-en==2.0.0",
    "hangul-romanize==0.1.0",
    "inflect==7.4.0",
    "jamo==0.4.1",
    "jieba==0.42.1",
    "jsonlines==1.2.0",
    "librosa==0.10.2.post1",
    "networkx==2.8.8",
    "nltk==3.2.4",
    "num2words==0.5.13",
    "numba==0.60.0",
    "onnxruntime==1.20.1",
    "openai-whisper==20240930",
    "opencv-python==4.11.0.86",
    "pyannote-audio==3.3.2",
    "pynndescent==0.5.13",
    "pypinyin==0.53",
    "pysbd==0.3.4",
    "python-crfsuite==0.9.11",
    "python-dotenv==1.0.1",
    "scikit-image==0.23.2",
    "spacy==3.8.2",
    "sudachidict-core==20250515",
    "sudachipy==0.6.9",
    "tensorflow==2.8.0rc0",
    "torch==2.5.1",
    "trainer==0.0.36",
    "transformers==4.46.3",
    "tzlocal==5.3.1",
    "umap-learn==0.5.1",
    "unidecode==1.3.8",
]
